--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "robrichards/xmlseclibs",
+  "name": "tomasz-kusy/xmlseclibs",
   "description": "A PHP library for XML Security",
   "license": "BSD-3-Clause",
   "keywords": [
@@ -8,7 +8,7 @@
     "signature",
     "security"
   ],
-  "homepage": "https://github.com/robrichards/xmlseclibs",
+  "homepage": "https://github.com/tomasz-kusy/xmlseclibs",
   "autoload": {
     "psr-4": {
       "RobRichards\\XMLSecLibs\\": "src"
