Big int serial numbers issue

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   },
   "require": {
     "php": ">= 5.4",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "ext-bcmath": "*"
   },
   "replace": {
     "robrichards/xmlseclibs": "3.1.0"
